# libcutils

./: .clang_complete  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/libcutils/: arg_parser.h  config_file.h  logger.h  result.h  string_view.h  util_makros.h  util_paths.h  util_strings.h
src/: arg_parser.c  logger.c  result.c  string_view.c  util_strings.c
test/: .gitignore  CMakeLists.txt  Makefile  main.c  test_arg_parser.c  test_logger.c  test_result.c  test_string_view.c  test_util_makros.c  test_util_strings.c  testutils.h
